--- a/style.css
+++ b/style.css
@@ -4,8 +4,22 @@ body {
 
 form {
   background-color: #fff;
+  border-radius: 10px;
+  padding: 20px 0;
 }
 
 .ticket-structure {
   background-color: #fff;
+  padding-bottom: 20px;
+}
+
+.bg-gray {
+  background-color: #808080;
+}
+
+#generated-ticket {
+  display: none;
+}
+#generated-ticket.visible {
+  display: flex;
 }
